# csp-telegram

./: .copier-answers.yaml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
csp_telegram/tests/: test_all.py
